@@ -284,3 +284,49 @@ FOUND
 
 AT_CLEANUP
 
+
+AT_SETUP([CALL with OCCURS DEPENDING ON])
+AT_KEYWORDS([runsubscripts subscripts ODO])
+
+AT_DATA([prog.cob], [
+       IDENTIFICATION DIVISION.
+       PROGRAM-ID. prog-main.
+
+       DATA DIVISION.
+       WORKING-STORAGE SECTION.
+       01  parm.
+           03  parm-size PIC S999 COMP.
+           03  parm-str.
+               05  parm-char PIC X OCCURS 0 TO 100 TIMES
+                        DEPENDING ON parm-size.
+           
+       PROCEDURE DIVISION.
+           MOVE 10 TO parm-size
+           MOVE "Hi, there!" TO parm-str
+           CALL "prog" USING parm
+           .
+       END PROGRAM prog-main.
+       
+       IDENTIFICATION DIVISION.
+       PROGRAM-ID. prog.
+
+       DATA DIVISION.
+       LINKAGE SECTION.
+       01  parm.
+           03  parm-size PIC S999 COMP.
+           03  parm-str.
+               05  parm-char PIC X OCCURS 0 TO 100 TIMES
+                        DEPENDING ON parm-size.
+       
+       PROCEDURE DIVISION USING parm.
+           DISPLAY FUNCTION TRIM(parm-str)
+           .
+       END PROGRAM prog.
+])
+
+AT_CHECK([$COMPILE prog.cob], [0], [], [])
+AT_CHECK([$COBCRUN_DIRECT ./prog], [0],
+[Hi, there!
+])
+
+AT_CLEANUP
